# rust-tinysegmenter

./: .gitignore  Cargo.toml  README.md
benchmark/: benchmark.rs
src/: constants.rs  lib.rs
test/: test.rs
