[package]
name = "tinysegmenter"
version = "0.1.0"
authors = [ "woxtu <woxtup@gmail.com>" ]
description = "Compact Japanese tokenizer"
repository = "https://github.com/woxtu/rust-tinysegmenter"
license = "MIT"

[dependencies]
lazy_static = "0.1.15"
maplit = "0.1.2"

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "benchmark"
path = "benchmark/benchmark.rs"
