[package]
name = "tinysegmenter"
version = "0.1.1"
authors = [ "woxtu <woxtup@gmail.com>" ]
description = "Compact Japanese tokenizer"
repository = "https://github.com/woxtu/rust-tinysegmenter"
license = "MIT"

[dependencies]
lazy_static = "1.0"
maplit = "1.0"

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "benchmark"
path = "benchmark/benchmark.rs"
