[package]
authors = ["woxtu <woxtup@gmail.com>"]
description = "Compact Japanese tokenizer"
license = "MIT"
name = "tinysegmenter"
repository = "https://github.com/woxtu/rust-tinysegmenter"
version = "0.1.1"
[[bench]]
name = "benchmark"
path = "benchmark/benchmark.rs"

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
fnv = "1.0.6"
lazy_static = "1.0"
